ecmascript/parser/tests/test262-error-references/fail/a651ee9d0db08692.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/a651ee9d0db08692.js:1:19
  |
1 | for (let [a = let];;) {}
  |                   ^

